--- a/app/views/sales/_form.html.erb
+++ b/app/views/sales/_form.html.erb
@@ -108,6 +108,15 @@
                style="width: 100px;"
                data-sales-form-target="unitPriceDisplay">
       </div>
+
+      <div style="display: inline-block; margin-right: 15px;">
+        <label style="display: inline-block; margin-right: 5px;">Stock disponible</label>
+        <input type="text"
+               readonly
+               class="border border-gray-300 p-1.5 rounded-sm bg-gray-50"
+               style="width: 100px;"
+               data-sales-form-target="stockDisplay">
+      </div>
     </div>
 
     <div class="mb-4">
