--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,9 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+body {
+  padding-top: 20px;
+  padding-bottom: 50px;
+  min-height: 100vh;
+}
