--- a/app/assets/stylesheets/components/_flash.scss
+++ b/app/assets/stylesheets/components/_flash.scss
@@ -3,7 +3,7 @@
   top: 4.3rem;
   left: 50%;
   transform: translateX(-50%);
-
+  z-index: 9999;
   display: flex;
   flex-direction: column;
   align-items: center;
