--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -42,6 +42,11 @@
         <i class="fa-solid fa-user"></i> My profile
       <% end %>
     </li>
-
+    <li class="nav-item">
+      <%= link_to new_upload_path, class: "flex items-center" do %>
+        <i class="fas fa-upload"></i>
+        <span>Upload Image</span>
+      <% end %>
+    </li>
   </ul>
 </div>
