--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
     </li>
     <li class="nav-item">
       <%= link_to purchases_path, class: "nav-link" do %>
-        <i class="fa-solid fa-store"></i> Purchase Orders
+        <i class="fas fa-shopping-cart"></i> Purchase Orders
       <% end %>
     </li>
     <li class="nav-item">
