--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -20,7 +20,9 @@
 }
 
 .sidebar .nav-link:hover {
-  background-color: #34495e;
+  background-color: #FF4800;
+  color: white;
+  text-decoration: none;
 }
 
 .sidebar .nav-link i {
