--- a/app/views/uploads/_upload.html.erb
+++ b/app/views/uploads/_upload.html.erb
@@ -1,7 +1,15 @@
  <div class="col">
   <div class="card h-100 custom-card">
     <div class="card-img-container">
-      <%= cl_image_tag upload.photo, class: "card-img-top custom-card-img" %>
+      <% if upload.image.attached? %>
+        <%= cl_image_tag upload.image.key, class: "card-img-top custom-card-img" %>
+      <% else %>
+        <div class="bg-gray-100 h-48 flex items-center justify-center">
+          <svg class="h-20 w-20 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+          </svg>
+        </div>
+      <% end %>
     </div>
     <div class="card-body">
       <p class="card-text text-muted">
